# anime-tracking-sheet

./: Cargo.toml  README.md
src/: anime.csv  main.rs  table.rs
