[package]
name            = "anime-tracking-sheet" 
version         = "0.1.0"
edition         = "2024"
authors         = ["smccaffery0 <sundikarenia@gmail.com>"]
description     = "in terminal  anime spreadsheet tracker"
license         = "MIT"
repository      = "https://github.com/smccaffery0/anime-tracking-sheet"
readme          = "README.md"
keywords        = []
categories      = []

[dependencies]
clap = "4.6.1"
comfy-table = "7.2.2"
csv = "1.4.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
strum = "0.28.0"

[dev-dependencies]

[lints.rust]
unsafe_code         = "forbid"
missing_docs        = "warn"
unused_must_use     = "warn"

[lints.clippy]
pedantic        = { level = "warn", priority = -1 }
cargo           = { level = "warn", priority = -1 }
unwrap_used     = "warn"
expect_used     = "warn"
todo            = "warn"

